--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <title>Python Flask File Upload Example</title>
 <h2>Select a file to upload</h2>
+<link rel="stylesheet" href="../static/style.css">
 <p>
 	{% with messages = get_flashed_messages() %}
 	  {% if messages %}
