--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,7 +1,6 @@
-<!doctype html>
+<!-- <!doctype html>
 <title>Python Flask File Upload Example</title>
 <h2>Select a file to upload</h2>
-<link rel="stylesheet" href="../static/style.css">
 <p>
 	{% with messages = get_flashed_messages() %}
 	  {% if messages %}
@@ -27,6 +26,40 @@
 		</p>
     </dl>
     <p>
+		<input type="submit" value="Submit">
+	</p>
+</form> -->
+
+<!doctype html>
+<title>Python Flask File Upload Example</title>
+<h2>Select a file to upload</h2>
+<p>
+	{% with messages = get_flashed_messages() %}
+	{% if messages %}
+<ul>
+	{% for message in messages %}
+	<li>{{ message }}</li>
+	{% endfor %}
+</ul>
+{% endif %}
+{% endwith %}
+</p>
+{% if filename %}
+<div>
+	<img src="{{ url_for('display_image', filename=filename) }}">
+</div>
+<h3>Treatment Recommendation:</h3>
+<p>{{ treatment }}</p>
+<h3>Confidence Score:</h3>
+<p>{{ confidence_score }}</p>
+{% endif %}
+<form method="post" action="/" enctype="multipart/form-data">
+	<dl>
+		<p>
+			<input type="file" name="file" autocomplete="off" required>
+		</p>
+	</dl>
+	<p>
 		<input type="submit" value="Submit">
 	</p>
 </form>
