--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,53 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python Flask File Upload Example</title>
-    <link rel="stylesheet" href="../static/style.css">
-    <style>
-        .image-preview-wrapper {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 20px;
-        }
-        #preview {
-            max-width: 100%;
-            height: auto;
-            display: none;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h2>Select a file to upload</h2>
-    <p>
-        {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                <ul>
-                    {% for message in messages %}
-                        <li>{{ message }}</li>
+    <h1>The Plant Doctors</h1>
+    <div class="container">
+        <div class="table-container common-style">
+            <h2>Plant Conditions Currently Included in Dataset</h2>
+            <table>
+                <thead>
+                    <tr>
+                        {% for header in headers %}
+                            <th>{{ header }}</th>
+                        {% endfor %}
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for row in plant_conditions %}
+                        <tr>
+                            {% for cell in row %}
+                                <td>{{ cell }}</td>
+                            {% endfor %}
+                        </tr>
                     {% endfor %}
-                </ul>
+                </tbody>
+            </table>
+        </div>
+        <div class="form-container common-style">
+            <h2>Select a file to upload</h2>
+            <p>
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        <ul>
+                            {% for message in messages %}
+                                <li>{{ message }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                {% endwith %}
+            </p>
+            {% if filename %}
+                <div>
+                    <img src="{{ url_for('display_image', filename=filename) }}" alt="Uploaded Image">
+                </div>
+                <h3>Treatment Recommendation:</h3>
+                <p class="treatment-container">{{ treatment }}</p>
             {% endif %}
-        {% endwith %}
-    </p>
-    {% if filename %}
-        <div>
-            <img src="{{ url_for('display_image', filename=filename) }}" alt="Uploaded Image">
+            <form method="post" action="/upload" enctype="multipart/form-data">
+                <div class="input-file">
+                    <label for="file" class="button">Choose File</label>
+                    <input type="file" name="file" id="file" autocomplete="off" required>
+                </div>
+                <div class="image-preview-wrapper">
+                    <img id="preview" src="#" alt="Image Preview" style="display: none;">
+                </div>
+                <p>
+                    <input type="submit" class="button" value="Submit">
+                </p>
+            </form>
         </div>
-        <h3>Treatment Recommendation:</h3>
-        <p class="treatment-container">{{ treatment }}</p>
-    {% endif %}
-    <form method="post" action="/" enctype="multipart/form-data">
-        <div class="input-file">
-            <label for="file" class="button">Choose File</label>
-            <input type="file" name="file" id="file" autocomplete="off" required>
-        </div>
-        <div class="image-preview-wrapper">
-            <img id="preview" src="#" alt="Image Preview">
-        </div>
-        <p>
-            <input type="submit" class="button" value="Submit">
-        </p>
-    </form>
+    </div>
 
     <script>
         document.getElementById('file').onchange = function (event) {
